# stassosrv-dto/src/main/java/it/csi/stacore/stassosrv/api/dto/TipoUtente.java
@@ -1,0 +1,88 @@
+package it.csi.stacore.stassosrv.api.dto;
+
+import java.util.Objects;
+import java.util.ArrayList;
+import io.swagger.annotations.ApiModel;
+import java.io.Serializable;
+import javax.validation.constraints.*;
+import io.swagger.annotations.*;
+
+@ApiModel(description="Tipo Utente")
+
+public class TipoUtente  implements Serializable {
+  // verra' utilizzata la seguente strategia serializzazione degli attributi: [implicit-camel-case] 
+  private static final long serialVersionUID = 1L;
+  
+  private String codice = null;
+  private String descrizione = null;
+
+  /**
+   * Codice Utente
+   **/
+  
+  @ApiModelProperty(example = "OP-Operatore, AP-Applicativo, BA-Batch", value = "Codice Utente")
+
+  // nome originario nello yaml: codice 
+  public String getCodice() {
+    return codice;
+  }
+  public void setCodice(String codice) {
+    this.codice = codice;
+  }
+
+  /**
+   * Descrizione tipo Utente
+   **/
+  
+  @ApiModelProperty(example = "OP-Operatore, AP-Applicativo, BA-Batch", value = "Descrizione tipo Utente")
+
+  // nome originario nello yaml: descrizione 
+  public String getDescrizione() {
+    return descrizione;
+  }
+  public void setDescrizione(String descrizione) {
+    this.descrizione = descrizione;
+  }
+
+
+  @Override
+  public boolean equals(Object o) {
+    if (this == o) {
+      return true;
+    }
+    if (o == null || getClass() != o.getClass()) {
+      return false;
+    }
+    TipoUtente tipoUtente = (TipoUtente) o;
+    return Objects.equals(codice, tipoUtente.codice) &&
+        Objects.equals(descrizione, tipoUtente.descrizione);
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(codice, descrizione);
+  }
+
+  @Override
+  public String toString() {
+    StringBuilder sb = new StringBuilder();
+    sb.append("class TipoUtente {\n");
+    
+    sb.append("    codice: ").append(toIndentedString(codice)).append("\n");
+    sb.append("    descrizione: ").append(toIndentedString(descrizione)).append("\n");
+    sb.append("}");
+    return sb.toString();
+  }
+
+  /**
+   * Convert the given object to string with each line indented by 4 spaces
+   * (except the first line).
+   */
+  private String toIndentedString(Object o) {
+    if (o == null) {
+      return "null";
+    }
+    return o.toString().replace("\n", "\n    ");
+  }
+}
+
